# citipoints

./: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json  vercel.json
.github/workflows/: ci.yml
apps/api/: .coverage  .env.example  BIGQUERY-SETUP.md  Dockerfile  README.md  codedb.snapshot  fly.toml  package.json  pyproject.toml
apps/api/data/: customers.csv  skus.csv
apps/api/src/citipoints_api/: __init__.py  config.py  logging_conf.py  main.py  schemas.py
apps/api/src/citipoints_api/data/: __init__.py  bq_store.py  filters.py  seed.py  store.py
apps/api/src/citipoints_api/routers/: __init__.py  anomaly.py  chat.py  coalition_flow.py  cohort.py  coo.py  creative.py  elasticity.py  forecast.py  fraud.py  ifrs.py  insights.py  kpi.py  market_basket.py  meta.py  nba.py  overview.py  predictive.py  receipts.py  recommendations.py  save_loop.py  segments.py
apps/api/src/citipoints_api/services/: __init__.py  banners.py  claude_cli.py  insights.py  ml_models.py  queries.py  telemetry.py
apps/api/tests/: conftest.py  test_health_and_kpi.py
apps/web/: .env.example  codedb.snapshot  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/src/app/alerts/: page.tsx
apps/web/src/app/analyst/: page.tsx
apps/web/src/app/anomaly/: page.tsx
apps/web/src/app/app-health/: page.tsx
apps/web/src/app/audit/: page.tsx
apps/web/src/app/benchmarks/: page.tsx
apps/web/src/app/bundles/: page.tsx
apps/web/src/app/catalog/: page.tsx
apps/web/src/app/category/: page.tsx
apps/web/src/app/chat/: page.tsx
apps/web/src/app/coalition-flow/: page.tsx
apps/web/src/app/cohort/: page.tsx
apps/web/src/app/compliance/: page.tsx
apps/web/src/app/creative/: page.tsx
apps/web/src/app/customers/: page.tsx
apps/web/src/app/elasticity/: page.tsx
apps/web/src/app/executive/: page.tsx
apps/web/src/app/experiments/: page.tsx
apps/web/src/app/forecast/: page.tsx
apps/web/src/app/fraud/: page.tsx
apps/web/src/app/ifrs/: page.tsx
apps/web/src/app/insights/: page.tsx
apps/web/src/app/loyalty/: page.tsx
apps/web/src/app/market-basket/: page.tsx
apps/web/src/app/models/: page.tsx
apps/web/src/app/outlook/: page.tsx
apps/web/src/app/overview/: page.tsx
apps/web/src/app/partners/: page.tsx
apps/web/src/app/predictive/: page.tsx
apps/web/src/app/price-tiers/: page.tsx
apps/web/src/app/receipts/: page.tsx
apps/web/src/app/recommendations/: page.tsx
apps/web/src/app/save-loop/: page.tsx
apps/web/src/app/segments/: page.tsx
apps/web/src/app/stores/: page.tsx
apps/web/src/app/tier-migration/: page.tsx
apps/web/src/components/: providers.tsx  theme-toggle.tsx
apps/web/src/components/ai-copilot/: ai-copilot.tsx  ai-filter-strip.tsx  conditional-copilot.tsx  intent-parser.ts
apps/web/src/components/analyst/: analyst-deck.tsx
apps/web/src/components/annotations/: chart-annotations.tsx
apps/web/src/components/anomaly/: anomaly-series-chart.tsx  explain-anomaly-modal.tsx
apps/web/src/components/brand/: nexus-logo.tsx
apps/web/src/lib/: api.ts  csv.ts  demo-data.ts  format.ts  partner.ts  types.ts  window.ts
scripts/: dev.sh
(+54 files in other folders)
