[project]
name = "citipoints-api"
version = "0.1.0"
description = "CITI Points v2 analytics API — FastAPI + DuckDB + ML stack"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Gopal Bagaswar", email = "gopalbagaswar7@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "orjson>=3.10.0",
    "python-multipart>=0.0.12",
    # Data
    "pandas>=2.2.0",
    "polars>=1.12.0",
    "numpy>=1.26.0,<2.1.0",
    "pyarrow>=17.0.0",
    "duckdb>=1.1.0",
    "Faker>=30.0.0",
    # ML
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "lifetimes>=0.11.3",
    "mlxtend>=0.23.3",
    "shap>=0.46.0",
    "statsmodels>=0.14.0",
    "joblib>=1.4.0",
    # Observability
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "networkx>=3.6.1",
]

[project.optional-dependencies]
bigquery = [
    "google-cloud-bigquery>=3.26.0",
    "google-cloud-bigquery-storage>=2.27.0",
    "db-dtypes>=1.3.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pandas-stubs>=2.2.0",
    "types-requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citipoints_api"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",    # pycodestyle + pyflakes
    "I",              # isort
    "B",              # flake8-bugbear
    "C4",             # flake8-comprehensions
    "N",              # pep8-naming
    "UP",             # pyupgrade
    "SIM",            # flake8-simplify
    "RUF",            # ruff-specific
    "PL",             # pylint essentials
]
ignore = ["E501", "PLR0913", "PLR2004", "PLR0912", "PLR0915"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "N802", "N803"]
"src/citipoints_api/data/seed.py" = ["PLR0915"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "lifetimes.*",
    "mlxtend.*",
    "shap.*",
    "xgboost.*",
    "statsmodels.*",
    "faker.*",
    "duckdb.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --cov=citipoints_api --cov-report=term-missing --cov-fail-under=60"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
]

[tool.coverage.run]
branch = true
source = ["citipoints_api"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 70
